--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -6,6 +6,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/phrase_title"/>
+        android:id="@+id/phrase_title"
+        android:gravity="center"
+        android:textColor="@color/colorText"
+        android:textSize="45dp"
+        android:fontFamily="@font/lobster"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
