--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorText">#ffffff</color>
+    <color name="colorTextLang">#373737</color>
+    <color name="colorBackgroundLang">#BDBDBD</color>
+    <color name="colorMainRedA">#dd3218</color>
+    <color name="colorMainRedB">#c7342f</color>
+    <color name="colorMainRedC">#ed392c</color>
 </resources>
