--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="android:textColorSecondary">@color/colorText</item>
     </style>
 
+    <style name="SplashscreenTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:background">@drawable/splash_screen</item>
+        <item name="colorPrimaryDark">@color/colorMainRedA</item>
+    </style>
+
 </resources>
