--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -26,22 +26,24 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:alpha="0.6"
-        android:layout_marginBottom="5dp">
+        android:alpha="0.4"
+        android:layout_marginBottom="15dp"
+        android:id="@+id/view_i">
 
         <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:background="@drawable/lang_background"
             android:layout_centerInParent="true"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorTextLang"
-            android:text="En"
+            android:text=" i "
             android:fontFamily="@font/lobster"
-            android:textSize="20sp"
-            android:layout_centerInParent="true"/>
+            android:textSize="23sp"
+            android:layout_centerInParent="true"
+            android:layout_margin="5dp"/>
 
     </RelativeLayout>
 
