--- a/app/src/main/res/layout/menu_viewholder.xml
+++ b/app/src/main/res/layout/menu_viewholder.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="4dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground">
 
@@ -11,16 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/menu_item_text_view"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:layout_weight="5"
+            android:layout_marginVertical="22dp"
+            android:id="@+id/linearlayout">
+
+            <TextView
+                android:id="@+id/menu_item_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginHorizontal="15dp"
+                android:fontFamily="@font/asap"
+                android:textSize="21sp"/>
+
+
+        </LinearLayout>
+
+
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:id="@+id/menu_item_imageview"
             android:layout_margin="8dp"
-            android:layout_marginVertical="25dp"
-            android:layout_weight="3"
-            android:fontFamily="@font/asap"
-            android:textSize="18sp" />
+            android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
 
