--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="@color/colorMainRedC"
-        android:centerColor="@color/colorMainRedB"
-        android:endColor="@color/colorMainRedA"
+    <gradient android:startColor="@color/colorMainC"
+        android:centerColor="@color/colorMainB"
+        android:endColor="@color/colorMainA"
         android:angle="90"></gradient>
 
 </shape>
