--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="colorMainRedA">#dd3218</color>
     <color name="colorMainRedB">#c7342f</color>
     <color name="colorMainRedC">#ed392c</color>
-    <color name="colorMainA">#292929</color>
-    <color name="colorMainB">#191919</color>
-    <color name="colorMainC">#2B2B2B</color>
+    <color name="colorMainA">#374e69</color>
+    <color name="colorMainB">#374e69</color>
+    <color name="colorMainC">#374e69</color>
 </resources>
