--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -17,7 +17,7 @@
             android:textSize="17dp"
             android:layout_margin="25dp"
             android:textAlignment="center"
-            android:fontFamily="@font/asap"/>
+            android:fontFamily="@font/notosans"/>
 
     </androidx.core.widget.NestedScrollView>
 
