--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -14,7 +14,7 @@
             android:id="@+id/phrase_content"
             android:gravity="center"
             android:textColor="@color/colorText"
-            android:textSize="17dp"
+            android:textSize="17sp"
             android:layout_margin="25dp"
             android:textAlignment="center"
             android:fontFamily="@font/notosans"/>
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorTextLang"
-            android:text=" i "
+            android:text="@string/i"
             android:fontFamily="@font/lobster"
             android:textSize="23sp"
             android:layout_centerInParent="true"
