--- a/app/src/main/res/layout/menu_viewholder.xml
+++ b/app/src/main/res/layout/menu_viewholder.xml
@@ -9,33 +9,32 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="5"
-            android:layout_marginVertical="12dp"
-            android:id="@+id/linearlayout">
+            android:layout_gravity="center_vertical"
+            android:layout_marginVertical="8dp">
 
             <TextView
                 android:id="@+id/menu_item_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
                 android:layout_marginHorizontal="15dp"
-                android:fontFamily="@font/asap"
-                android:textSize="21sp"/>
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent" android:layout_height="match_parent"
+                android:fontFamily="@font/notosans"
+                android:textSize="21sp"
+                android:includeFontPadding="false"/>
+            <TextView
+                android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:fontFamily="@font/asap"
+                android:fontFamily="@font/notosans"
                 android:textSize="15sp"
                 android:layout_marginHorizontal="17dp"
-                android:id="@+id/description_textview">
-
-            </TextView>
+                android:id="@+id/description_textview"
+                android:includeFontPadding="false"/>
 
         </LinearLayout>
 
@@ -47,7 +46,8 @@
             android:adjustViewBounds="true"
             android:id="@+id/menu_item_imageview"
             android:layout_margin="8dp"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/menu_image" />
 
     </LinearLayout>
 
